# palomero

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  LICENSE  README.md  main.py  pixi.toml  pyproject.toml  release.sh  specs.md
.dev/: README.md  map-roi-minimal.py  map-roi.py
.github/workflows/: release.yml
note/: align-and-warp-image.md
pixi/: pixi.toml
scripts/: align_elastix.py  dev_run_elastix.py  map_roi.py  transform_roi_points.py
src/palomero/: __init__.py  cli.py  constants.py  local_aligner.py  models.py  omero_handler.py  transform_roi_points.py
src/palomero/align/: aligner.py  elastix_wrapper.py  palom_wrapper.py
src/palomero/web/: app.py  config.py
src/palomero/web/public/: TUTORIAL.md
